# communication-application

./: .gitignore  README  README.md  Specs.accounts.md  Specs.cert.md  Specs.md  Specs.server.id.md  Specs.server.md
.github/: dependabot.yml
.github/workflows/: rust-build.yml  rust-clippy.yml  rust-fmt.yml  rust.yml
docs/server/: Specs.server.md
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
server/src/messages/: types.rs
server/src/security/: Pem.rs  cert.rs  identity.rs  mod.rs  pem.rs
server/src/tcp/: mod.rs
server/src/tcp/secure_loop/: init.rs
server/tests/: lib_tests.rs
