[package]
name = "communication_application_server"
version = "0.1.0"
edition = "2021"
description = "An experimental new format for server-client communcation via Sockets and TOML"
readme = "../README.md"
repository = "https://github.com/secondary-smiles/communication-application"
license = "BSL-1.0"
private = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
chrono = "0.4.19"
openssl = "0.10.41"
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5.9"
